--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header class="header">
+        <div>
         <nav class="header-navigation">
             <a class="logo link" href="">
                 <img class="logo-img" src="./img/logo1.png" alt="логотип">
@@ -34,6 +35,7 @@
                 </li>
             </ul>
         </nav>
+        </div>
 
 <a class="tel-link link" href="">+38077 777 77 77</a>
 <button class="modal-btn" type="button">перезвоніть мені</button>
